<resources>
    <string name="app_name">SpaceJam</string>
    <string name="password">Password</string>
    <string name="username">Name</string>
    <string name="logo_png">Logo.png</string>
    <string name="cd_logo">logo.png</string>
    <string name="login">login</string>
    <string name="email">Email Address</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account_instead">Sign up instead</string>
    <string name="mail">Email</string>
    <string name="already">Sign in instead</string>
    <string name="nav_item1">Home</string>
    <string name="nav_item2">Profile</string>
    <string name="nav_item3">Discover</string>
    <string name="nav_item4">Notifications</string>
    <string name="nav_item5">Settings</string>
    <string name="nav_item6">Logout</string>
    <string name="name_tag">Your Name Probably</string>
    <string name="profile_desc">Your profile description</string>
    <string name="uname">Username</string>
    <string name="cd_pro_pic">profile picture</string>
    <string name="bottom_sheet_name">Mayank Sinha</string>
    <string name="bottom_sheet_email">Movies and Geek stuff</string>
    <string name="settings">Settings</string>
    <string name="change_photo">Change Photo</string>
    <string name="calling_activity">calling_activity</string>
    <string name="profile_settings_fragment">ProfileSettingsFragment</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="edit_profile_fragment">ProfileSettingsFragment</string>
    <string name="set_a_profile_photo">Edit Photo</string>
</resources>
