<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_item1" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_white_24dp"
            android:title="@string/nav_item2" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_discover_white_24dp"
            android:title="@string/nav_item3" />
        <item
            android:id="@+id/nav_notifs"
            android:icon="@drawable/ic_notifications_active_white_24dp"
            android:title="@string/nav_item4" />
        <item
            android:id="@+id/nav_prefs"
            android:title="@string/nav_item5"
            android:icon="@drawable/ic_settings_white_24dp"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_item6"
            android:icon="@drawable/ic_log_out_white_24dp"/>
    </group>
</menu>